kubernetes/local/utopia-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: users-service
  labels:
    app: users
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80



---

apiVersion: v1
kind: Service
metadata: 
  name: flights-service
  labels:
    app: flights
spec:
  selector:
    app: flights
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


---

apiVersion: v1
kind: Service
metadata: 
  name: bookings-service
  labels:
    app: bookings
spec:
  selector:
    app: bookings
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
