kubernetes/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /airline
            pathType: Prefix
            backend:
              service: 
                name: flights-service
                port:
                  number: 80 
          - path: /booking
            pathType: Prefix
            backend:
              service: 
                name: bookings-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: users-service
                port:
                  number: 80
